--- a/Math/LinearSystem/LinearSystem.tex
+++ b/Math/LinearSystem/LinearSystem.tex
@@ -345,7 +345,7 @@ If A is an n x n matrix, the determinant of A is obtained by multiplying each el
     \item[>>] you can expand a whole row or column in either direction, not only the first row, you can also use the last column something like that -> Same result.
 \end{itemize}
 
-\subsection{invertibility}
+\subsection{Invertibility}
 if A is a square matrix, then A has an inverse if and only if det(A) $\neq$ 0 \\
 \indent >> ex. show that the matrix A has no inverse A=$\begin{bmatrix} 1 & 2 & 0 & 4  \\ 0 & 0 & 0 & 3 \\ 5 & 6 & 2 & 6 \\ 2 & 4 & 0 & 9\end{bmatrix} = 
 -0 \times A_{21} + 0 \times A_{22} - 0 \times A_{23} + 3 \times A_{24} = 3A_{24} = 3 \begin{vmatrix} 1 & 2 & 0 \\ 5 & 6 & 2 \\ 2 & 4 & 0 \end{vmatrix} = 3(-2) \begin{vmatrix} 1 & 2 \\ 2 & 4 \end{vmatrix}
@@ -684,7 +684,7 @@ $\newline\newline$
 \end{tikzpicture}
 % ================================== 3 dimensional plane ===============================================
 
-\subsection{Infinitely Many Solution}
+\subsection{Infinitely Many Solution = Dependent System}
 
 \begin{center}
 $\begin{vNiceArray}{cccc}[right-margin=.4em]
@@ -695,18 +695,222 @@ $\begin{vNiceArray}{cccc}[right-margin=.4em]
 \end{vNiceArray}$ \\
 \begin{center}
 $\uparrow$\\
-\color{red}z is not a leading variable. It is a free variable, meaning when z take different values, lines will change its slope and intersection with the coordinate, 
-or plane will change inclination degree and intersection with coordinate, and so on for higher dimension 
+\color{red}z is not a leading variable. It is a free variable, meaning when z can take different values. According to the last row of the matrix, we are letting one dimension free,
+so if vector in 3-dimension with a free variable, then it's a line in $R^3$, something like that. \\
+\color{blue}
+\begin{tikzpicture}[x=1cm, y=1cm, z=-0.6cm]
+        % Axes
+        \draw [->] (0,0,0) -- (4,0,0) node [right] {$x$};
+        \draw [->] (0,0,0) -- (0,4,0) node [left] {$y$};
+        \draw [->] (0,0,0) -- (0,0,4) node [left] {$z$};
+        % Vectors
+        \draw [->, thick] (0,0,0) -- (1,2,0);
+        \draw [->, thick] (0,0,0) -- (2,4,0);
+        \draw [->, thick] (0,0,0) -- (3,6,0);
+        % \draw [->, thick] (0,0,0) -- (2,0,1);
+        % Ticks
+            \foreach \i in {1,2}
+        {
+        \draw (-0.1,\i,0) -- ++ (0.2,0,0);
+        \draw (\i,-0.1,0) -- ++ (0,0.2,0);
+        \draw (-0.1,0,\i) -- ++ (0.2,0,0);
+        }
+        % Dashed lines
+        \draw [loosely dashed]
+            (0,2,0) -- (1,2,0) -- (1,0,0)
+            % (0,0,1) -- (2,0,1) -- (2,0,0)
+            ;
+        % Labels
+         \node [right] at (1,2,0) {(1, 2, 0)};
+         \node [right] at (2,4,0) {(2, 4, 0)};
+         \node [right] at (3,6,0) {(3, 6, 0)};
+
+\end{tikzpicture}
+the list of vectors goes on because of the free variable... 
 \end{center}
 \end{center}
 
 
+\section{Vector}
+
+\textbf{Learning Feature} is the most \textbf{important} thing for any data science, then How do we learn/visualize it? \\ 
+\small by vector: Apple = $[x_1, x_2, x_3, x_4, x_5]$
+
+
+\subsection{Vector in $R^2$}
+
+
+\begin{itemize}
+    \item Geometric Description 
+    \item[] \begin{tikzpicture}[x=1cm, y=1cm]
+        % Axes
+        \draw [->] (0,0) -- (4,0) node [right] {$x_1$};
+        \draw [->] (0,0) -- (0,4) node [left] {$x_2$};
+        % Vectors itself
+        \draw [->, thick] (0,0) -- (2,2);
+        \draw [->, thick] (0,0) -- (3,1);
+        % Ticks
+            \foreach \i in {1,2}
+        {
+        \draw (-0.1,\i) -- ++ (0.2,0);
+        \draw (\i,-0.1) -- ++ (0,0.2);
+        % \draw (-0.1,\i) -- ++ (0.2,0,0);
+        }
+        % Dashed lines for locating the vector
+        \draw [loosely dashed]
+            (0,2) -- (2,2) -- (2,0)
+            (0,1) -- (3,1) -- (3,0)
+            ;
+        % Labels, whether it's on the right or left or below or above, and many other thing
+         \node [right] at (2,2) {$\begin{bmatrix}
+                                    2\\2
+                                   \end{bmatrix}v_1$};
+         \node [right] at (3,1) {$\begin{bmatrix}
+                                   3\\1
+                                  \end{bmatrix}v_2$};
+        \end{tikzpicture}
+
+    \item Vector has magnitude and direction 
+        \begin{itemize}
+            \item[1)] magnitude: distance = $\sqrt{x_1^2 + x_2^2}$
+            \item[2)] direction: $\theta=\tan^{-1}(\frac{x_2}{x_1})$
+
+            \item[3)] representation: $\begin{cases} \vec{v_1} = 2i+2j \\ \vec{v_2} = 3i+j \end{cases}$
+            \item[4)] unit vector: 
+                $\begin{cases}
+                    U(\vec{v_1}) = \frac{2}{\sqrt{2^2 + 2^2}}i + \frac{2}{\sqrt{2^2 + 2^2}}j \\ 
+                    U(\vec{v_2}) = \frac{3}{\sqrt{3^2 + 1^2}}i + \frac{1}{\sqrt{3^2 + 1^2}}j
+                \end{cases}$
+        \end{itemize}
+                   
+
+\end{itemize}
+
+\subsection{Vector in $R^n$}
+
+
+\begin{itemize}
+    \item Geometric Description 
+    \item[] \begin{tikzpicture}[x=1cm, y=1cm, z=-0.6cm]
+        % Axes
+        \draw [->] (0,0,0) -- (4,0,0) node [right] {$x$};
+        \draw [->] (0,0,0) -- (0,4,0) node [left] {$y$};
+        \draw [->] (0,0,0) -- (0,0,4) node [left] {$z$};
+        % Vectors
+        \draw [->, thick] (0,0,0) -- (2,2,0);
+        \draw [->, thick] (0,0,0) -- (2,0,1);
+        % Ticks
+            \foreach \i in {1,2}
+        {
+        \draw (-0.1,\i,0) -- ++ (0.2,0,0);
+        \draw (\i,-0.1,0) -- ++ (0,0.2,0);
+        \draw (-0.1,0,\i) -- ++ (0.2,0,0);
+        }
+        % Dashed lines
+        \draw [loosely dashed]
+            (0,2,0) -- (2,2,0) -- (2,0,0)
+            (0,0,1) -- (2,0,1) -- (2,0,0)
+            ;
+        % Labels
+         \node [right] at (2,2,0) {$\begin{bmatrix}
+                                    2\\2\\0
+                                   \end{bmatrix}$};
+       \node [below] at (2,0,1) {$\begin{bmatrix}
+                                   2\\0\\1
+                                  \end{bmatrix}$};
+        \end{tikzpicture}
+\end{itemize}
+
+\subsection{Linear Combinations}
+\normalsize{Given vectors $v_1, v_2, \hdots, v_p$ in $R^n$ and given scalars $c_1, c_2, \hdots, c_p$, the vector \textbf{y} defined by} 
+\begin{center}
+    $\boldsymbol{y} = c_1\boldsymbol{v_1} + c_2\boldsymbol{v_2} + \hdots + c_p\boldsymbol{v_p}$
+\end{center}
+is called a \textbf{linear combination} of $\boldsymbol{v_1, v_2, \hdots, v_p}$ using weights $c_1, c_2, \hdots, c_p$
+
+\begin{itemize}
+
+    \item[>>] ex. Let $\boldsymbol{a_1} = \begin{bmatrix} 1 \\ 0 \\ 3 \end{bmatrix}, 
+                        \boldsymbol{a_2} = \begin{bmatrix} 4 \\ 2 \\ 14 \end{bmatrix},
+                        \boldsymbol{a_3} = \begin{bmatrix} 3 \\ 6 \\ 10 \end{bmatrix},
+                        \boldsymbol{b} = \begin{bmatrix} -1 \\ 8 \\ -5 \end{bmatrix}$, 
+                        determine if \textbf{b} is a linear combination of $\boldsymbol{a_1, a_2, \text{ and } a_3}$ 
+    \item[>>] solution: check if the following equation is true
+    \item[] $x_1 \begin{bmatrix} 1 \\ 0 \\ 3 \end{bmatrix} 
+            + x_2 \begin{bmatrix} 4 \\ 2 \\ 14 \end{bmatrix}
+            + x_3 \begin{bmatrix} 3 \\ 6 \\ 10 \end{bmatrix} =  
+            \begin{bmatrix} -1 \\ 8 \\ -5 \end{bmatrix}$
 
 
 
+\end{itemize}
+
+\subsection{Vector Equations}
+
+A vector equation 
+\begin{center}
+    $x_1 \boldsymbol{a_1}+x_2\boldsymbol{a_2}+ \hdots + x_n \boldsymbol{a_n} = b$ 
+\end{center}
+has the same solution set as the linear system whose augmented matrix is 
+\begin{center}
+    $\begin{bmatrix}
+        \boldsymbol{a_1} & \boldsymbol{a_2} & \hdots & \boldsymbol{a_n} & \aug & \boldsymbol{b}
+    \end{bmatrix}$
+\end{center}
 
 
+\subsection{Matrix Equation}
 
+\begin{itemize}
+
+    \item[1)] Matrix-Vector Multiplication: $\begin{bmatrix} \boldsymbol{a_1} & \boldsymbol{a_2} & \hdots & \boldsymbol{a_n} \end{bmatrix} 
+        \cdot \begin{bmatrix} x_1 \\ x_2 \\ \vdots \\ x_n \end{bmatrix} = x_1\boldsymbol{a_1} + x_2\boldsymbol{a_2} + \hdots + x_n \boldsymbol{a_n}$
+
+    \item[2)] Three Equivalent Ways of Viewing a Linear System
+        \begin{itemize}
+            \item[>>] as a system of linear equations
+            \item[>>] as a vector equation: $x_1\boldsymbol{a_1} + x_2\boldsymbol{a_2} + \hdots + x_n \boldsymbol{a_n} = \boldsymbol{b}$
+            \item[>>] as a matrix equation: $A\boldsymbol{x} = \boldsymbol{b}$
+        \end{itemize}
+
+    \item[3)] Useful Fact: The equation $A\boldsymbol{x} = \boldsymbol{b}$ has a solution if and only if \textbf{b} is a \underline{Linear Combination} of the columns of A.
+\end{itemize}
+
+\subsection{Homogeneous and Non-homogeneous Systems}
+
+\begin{itemize}
+    \item Homogeneous System 
+        \begin{itemize}
+            \item[>>] Definition: $A\boldsymbol{x} = \boldsymbol{0}$ \textbf{\underline{always}} has the \textbf{trivial solution} $\boldsymbol{x} = \boldsymbol{0}$;
+                linear independence states only trivial solution exist, which is a different situation
+            \item[>>] Nontrivial Solution: Nonzero vector solutions are called \textbf{nontrivial solutions}
+        \end{itemize}
+
+    \item Non-Homogeneous Syste 
+        \begin{itemize}
+            \item[>>] Definition: a Non-homogeneous system of equation is a system in which the vector of constants on the RHS of the equals sign is \textbf{non-zero}
+            \item[>>] A\textbf{x}=\textbf{b}, b is a non-zero vector
+            \item[>>] $\boldsymbol{b} = \begin{bmatrix} 0 \\ 3 \end{bmatrix} \neq \boldsymbol{0} $ 
+        \end{itemize}
+
+\end{itemize}
+\section{Linear Independence}
+
+A set of vectors $\{ \boldsymbol{v_1}, \boldsymbol{v_2}, \hdots, \boldsymbol{v_p} \}$ in $R^n$ is said to be \textbf{linearly independent} if vector equation
+\begin{center}
+    $x_1\boldsymbol{v_1} + x_2\boldsymbol{v_2} + \hdots + x_p\boldsymbol{v_p} = \boldsymbol{0}$
+\end{center}
+has \underline{only the trivial solution}
+
+\section{Linear Dependence}
+The set $\{ \boldsymbol{v_1}, \boldsymbol{v_2}, \hdots, \boldsymbol{v_p} \}$ is said to be \textbf{linearly dependent} if there exists weights $c_1, \hdots, c_p$ are not all 0, such that
+\begin{center}
+    $c_1\boldsymbol{v_1} + c_2\boldsymbol{v_2} + \hdots + c_p\boldsymbol{v_p} = \boldsymbol{0}$ \\
+    \color{red}! as long as weights $c_1, c_2, \hdots, c_p$ are not all zero, they could have some zero
+\end{center}
+
+
+\section{Vector Space}
 
 
 
