--- a/Math/LinearSystem/LinearSystem.tex
+++ b/Math/LinearSystem/LinearSystem.tex
@@ -902,6 +902,39 @@ A set of vectors $\{ \boldsymbol{v_1}, \boldsymbol{v_2}, \hdots, \boldsymbol{v_p
 \end{center}
 has \underline{only the trivial solution}
 
+\begin{itemize}
+    \item Is S = \{ 
+        $\begin{bmatrix}
+            1 \\ -4 \\ 3 
+        \end{bmatrix}, 
+        \begin{bmatrix}
+            0 \\ 3 \\ -1
+        \end{bmatrix},
+        \begin{bmatrix}
+            3 \\ -5 \\ 0
+        \end{bmatrix}, 
+        \begin{bmatrix}
+            0 \\ 2 \\ -2
+        \end{bmatrix}
+    $ \} a linearly independent set? solve. see if A$\vec{x}=\vec{0}$ has only trivial  \\ solution:
+    $\begin{bmatrix} 
+        1 & 0 & 3 & 0 & \aug & 0 \\ 
+        -4 & 3 & -5 & 2 & \aug & 0 \\
+        3 & -1 & 0 & -2 & \aug & 0 
+    \end{bmatrix}
+    \sim 
+    \begin{bmatrix} 
+        \color{blue}1 & 0 & 3 & \color{red}0 & \aug & 0 \\ 
+        0 & \color{blue}1 & 9 & \color{red}2 & \aug & 0 \\
+        0 & 0 & \color{blue}-20 & \color{red}-4 & \aug & 0 
+    \end{bmatrix}
+    ,$ last column is the free variable column, so linearly dependent \color{red}{if we only have three entry for each vector in S, but we have more then three vector to test, 
+    it's most likely LD, because once a REF is construct we gonna run out of rows than run out of columns} \color{black}
+   
+    \item one more example
+
+\end{itemize}
+
 \section{Linear Dependence}
 The set $\{ \boldsymbol{v_1}, \boldsymbol{v_2}, \hdots, \boldsymbol{v_p} \}$ is said to be \textbf{linearly dependent} if there exists weights $c_1, \hdots, c_p$ are not all 0, such that
 \begin{center}
@@ -911,8 +944,93 @@ The set $\{ \boldsymbol{v_1}, \boldsymbol{v_2}, \hdots, \boldsymbol{v_p} \}$ is 
 
 
 \section{Vector Space}
+is a non-empty set V of vector objects, give that 
+\begin{itemize}
+    \item[1)] zero vector($\vec{\boldsymbol{0}}$) belongs to the vector space 
+    \item[2)] if there exist two vectors, $\vec{\boldsymbol{u}}$ and $\vec{\boldsymbol{v}}$ and scalar c and d then 
+        \begin{itemize}
+            \item[•] $\vec{\boldsymbol{u}}$ + $\vec{\boldsymbol{v}}$ is also in V
+            \item[•] c$\vec{\boldsymbol{u}}$, d$\vec{\boldsymbol{v}}$ is also in V
+            \item[•] c$\vec{\boldsymbol{u}}$+d$\vec{\boldsymbol{v}}$ is also in V
+        \end{itemize}
+\end{itemize}
+
+\subsection{Subspace}
+
+A subspace i.e. H is a subset of V, and if maintains the following 3 properties 
+
+\begin{itemize}
+    \item[1)] The $\vec{\boldsymbol{0}}$ must be in H. 
+    \item[2)] If $\vec{\boldsymbol{u}}$, $\vec{\boldsymbol{v}}$ are two vectors in H, then $\vec{\boldsymbol{u}}$ + $\vec{\boldsymbol{v}}$ is also in H.
+    \item[3)] If c is a scalar, and $\vec{\boldsymbol{v}}$ is from H, then c$\vec{\boldsymbol{v}}$ is also in H.
+\end{itemize}
+
+\subsection{Basis}
+This is a Basis set for vector space (V): 
+$\begin{cases} 
+    \vec{\boldsymbol{v_1}} = (1,0,0)i \\
+    \vec{\boldsymbol{v_2}} = (0,1,0)j \\ 
+    \vec{\boldsymbol{v_3}} = (0,0,1)k \\
+\end{cases}$
+, and span\{ $\vec{\boldsymbol{u_1}}$, $\vec{\boldsymbol{u_2}}$, $\vec{\boldsymbol{u_3}}$ \} = $R^3$
+
+\subsection{Span}
+All linear combinations of a set of vectors: \{ $\vec{\boldsymbol{v_1}}$, $\vec{\boldsymbol{v_2}}$, $\hdots$, $\vec{\boldsymbol{v_k}}$ \} in k dimensions is called the span. 
+In other words, you can build up all vectors with scalars \{ $c_1, c_2, \hdots, c_k$ \} in k dimensions with the this set of vector. \color{red} in that case 
+\{$\vec{\boldsymbol{v_1}}$, $\vec{\boldsymbol{v_2}}$, $\hdots$, $\vec{\boldsymbol{v_k}}$ \} has to be \underline{linearly independent.}\color{black}
+
+\begin{itemize}
+    \item[1)] suppose we start with \{ $\vec{\boldsymbol{v_1}}$, $\vec{\boldsymbol{v_2}}$ \}, where $\vec{\boldsymbol{v_1}}$ = 
+        $\begin{bmatrix}
+            1 \\ 3
+        \end{bmatrix}$
+        and $\vec{\boldsymbol{v_2}}$ 
+        $\begin{bmatrix}
+            2 \\ 5
+        \end{bmatrix}$
+        , then span of \{ $\vec{\boldsymbol{v_1}}$, $\vec{\boldsymbol{v_2}}$ \} = $c_1 \cdot 
+        \begin{bmatrix}
+            1 \\ 3
+        \end{bmatrix}$
+        + $c_2 \cdot \begin{bmatrix} 2 \\ 5 \end{bmatrix}$, choose whatever value for $c_1, c_2$
+
+    \item[2)] show that the vector $\begin{bmatrix} 20 \\ 4 \end{bmatrix}$ belongs to span \{ $\begin{bmatrix} 1 \\ 3 \end{bmatrix}, \begin{bmatrix} 2 \\ 5 \end{bmatrix}$ \}. 
+        We solve this by augmented matrix and REF. Is the same as asking whether $\begin{bmatrix} 20 \\ 4 \end{bmatrix}$ is a linear combination of those two vectors: 
+        solution is the following
+        $\begin{bmatrix} 1 & 2 & \aug & 20 \\ 3 & 5 & \aug & 4 \end{bmatrix} \sim \begin{bmatrix} 1 & 0 & \aug & -92 \\ 0 & 1 & \aug & 56 \end{bmatrix}$,
+        omit the intermediate step for practices purpose. we then find $c_1$ = -92 and $c_2$ = 56, verify if these two scalar could result in target vector.
+
+    \item[3)] A = $\begin{bmatrix} 1 & 2 \\ 3 & 1 \\ 0 & 5 \end{bmatrix}$ and $ \vec{\boldsymbol{b}} 
+        = \begin{bmatrix} 8 \\ 3 \\ 7 \end{bmatrix}$, Is $\vec{\boldsymbol{b}}$ in the plane spanned by A? Solve. 
+        $\begin{bmatrix} 
+            1 & 2 & \aug & 8 \\ 
+            3 & 1 & \aug & 3 \\ 
+            0 & 5 & \aug & 7 
+        \end{bmatrix} \sim 
+        \begin{bmatrix}
+            1 & 2 & \aug & 8 \\ 
+            0 & -5 & \aug & -21 \\ 
+            0 & 0 & \aug & -4 
+        \end{bmatrix}$, indicating the system has no solution, therefore $\vec{\boldsymbol{b}}$ is not in the plane
+\end{itemize}
+
+\subsection{Null Space}
 
 
+
+\subsection{Column Space}
+
+\subsection{Row Space}
+
+\subsection{Linear Transformation}
+
+\subsection{Bases for Null A and Col A}
+
+\subsection{Rank Theorem}
+
+\subsection{Eigen Value and Eigen Vector}
+
+\section{Markov Chain}
 
 \end{document}
 
